--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Simple Calculator</title>
-        <link rel="stylesheet" type="text/css" href="calcustyle.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         
         <br/><br/><center><h1>Simple Calculator</h1>
                 <h4>By: Angela Requinto</h4>
